testdata/baselines/reference/submodule/conformance/namespaceAssignmentToRequireAlias.errors.txt
bug40140.js(1,11): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== bug40140.js (1 errors) ====
    const u = require('untyped');
              ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    u.assignment.nested = true
    u.noError()
    
    
==== node_modules/untyped/index.js (0 errors) ====
    module.exports = {}
    